# TestTaskAggregateSamples

./: .gitignore  README.md  main.py  pyproject.toml
app/: handlers.py
app/database/: connection.py
app/database/models/: base.py  sample.py
app/schemas/: sample.py
app/services/: sample.py
